@@ -1,0 +1,45 @@
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMXOxdolodx0WMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMWMMMMMMMMMMMMMMMMMM0l'            :NMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM0c.   .:KMMMMMMMMMMMWd.                ,MMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMN,         XMMMMMMMMMk.                  .MMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM'          oMMMMMMMMc                    oMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMNklclkWMMMMMM0           lMMMMMMMc                    ;MMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMW:      .XMMMMMk           OMMMMMMx                    ;WMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMc        'MMMMMK          .MMMMMMW.                   dMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMM.         KMMMMM'         0MMMMMM0                  ,KMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMM:         OMMMMMK        OMMMMMMM0                .OMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMW0kONMMMMMK         KMMMMMMX,    ,KMMMMMMMMW.             ,kMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMWc     lWMMMMO       .MMMMMMMMMKxxXMMMMMMMMMMM0.         .lXMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMM;       'WMMMMN:     0MMMMMMMMMMMMMMMMMMMMMMMMMNl'. ..:xXMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMM.        oMMMMMMXdldNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMx        .MMMMMMMMMMMMMMMMMMMMMMMWXK0OkkkkkkO0XNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMx        NMMMMMMMMMMMMMMWKko:'.                 .;d0WMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMK,     .MMMMMMMMMMW0o;.                             :KMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMXo;';KMMMMMMMKo'                                    cMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMXl.                                        xMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMk'                                           :MMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMO.                                             dMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMWc                                              ,WMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMN.                                              cWMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMW'                                             '0MMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMd                                            :KMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMM.                                         'dNMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMM                                       'oXMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMM.                                   ,xNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMM;                               .:kNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMO                            .l0MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMM,                         :KMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMN.                      oNMMMMMMMMMMMMMXkoc:,,,,:lOWMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMX.                   .XMMMMMMMMMMMM0:.            .XMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMN.                  xMMMMMMMMMMMM0                OMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMWc                 'NMMMMMMMMMMMO               'WMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMO.                .kMMMMMMMMMMc              .XMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMWl                 .l0WMMMW0;              .KMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMNl                   ...                ;NMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMWd.                                 .OMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMM0c.                            'xWMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM0l.                      .cKMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMNOo;.             .;dKMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMNKOxxdddkOXWMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM.
